# libgphoto2

./: CMakeLists.txt  HACKING.md  coverity-model.c
camlibs/: CMakeLists.txt
camlibs/adc65/: CMakeLists.txt  adc65.c
camlibs/agfa-cl20/: CMakeLists.txt  agfa_cl20.c
camlibs/aox/: CMakeLists.txt  aox.c  aox.h  library.c
camlibs/ax203/: CMakeLists.txt  ax203.c  ax203.h  ax203_compress_jpeg.c  ax203_decode_yuv.c  ax203_decode_yuv_delta.c  jidctflt.c  jpeg_memsrcdest.c  jpeg_memsrcdest.h  library.c  tinyjpeg-internal.h  tinyjpeg.c
camlibs/barbie/: CMakeLists.txt  barbie.c
camlibs/canon/: CMakeLists.txt  canon.c  canon.h  crc.c  library.c  library.h  serial.c  serial.h  usb.c  usb.h  util.c  util.h
camlibs/casio/: CMakeLists.txt  cam2jpgtab.h  camtojpeg.c  casio-qv-commands.c  casio-qv.c  jpegtab_f.h  ycctoppm.c
camlibs/clicksmart310/: CMakeLists.txt  clicksmart.c  clicksmart.h  library.c  spca50x-jpeg-header.h
camlibs/digigr8/: CMakeLists.txt  digi_postprocess.c  digigr8.c  digigr8.h  library.c
camlibs/digita/: CMakeLists.txt  README  commands.c  digita.c  digita.h  serial.c  usb.c
camlibs/dimera/: CMakeLists.txt  dimera3500.c  dimeratab.h  mesalib.c  mesalib.h
camlibs/directory/: CMakeLists.txt  directory.c
camlibs/docupen/: cache.c  docupen.c
camlibs/enigma13/: CMakeLists.txt  enigma13.c
camlibs/fuji/: CMakeLists.txt  fuji.c  fuji.h  library.c
camlibs/gsmart300/: CMakeLists.txt  gsmart300-jpeg-header.h  gsmart300.c  gsmart300.h  library.c
camlibs/hp215/: CMakeLists.txt  hp215.c  hp215.h
camlibs/iclick/: CMakeLists.txt  iclick.c  iclick.h  library.c
camlibs/jamcam/: CMakeLists.txt  jamcam.c  library.c  library.h
camlibs/jd11/: CMakeLists.txt  README  decomp.c  decomp.h  jd11.c  serial.c
camlibs/jl2005a/: CMakeLists.txt  jl2005a.c  jl2005a.h  library.c
camlibs/jl2005c/: CMakeLists.txt  img_enhance.c  img_enhance.h  jl2005bcd_decompress.c  jl2005bcd_decompress.h  jl2005c.c  jl2005c.h  jpeg_memsrcdest.c  library.c
camlibs/kodak-dc120/: CMakeLists.txt  README  dc120.c  library.c
camlibs/kodak-dc210/: CMakeLists.txt  README  dc210.c  library.c  library.h
camlibs/kodak-dc240/: CMakeLists.txt  README  dc240.c  library.c  library.h
camlibs/kodak-dc3200/: CMakeLists.txt  README  dc3200.c  dc3200.h  library.c  library.h
camlibs/kodak-ez200/: CMakeLists.txt  README  ez200.c
camlibs/konica/: CMakeLists.txt  konica.c  konica.h  library.c  lowlevel.c  lowlevel.h  qm150.c
camlibs/konica-qm150/: CMakeLists.txt  qm150.c
camlibs/largan-lmini/: CMakeLists.txt  largan.c  lmini.c  lmini.h
camlibs/lg-gsm/: CMakeLists.txt  lg_gsm.c  library.c
camlibs/lg_gsm/: lg_gsm.c  lg_gsm.h  library.c
camlibs/lumix/: CMakeLists.txt  lumix.c
camlibs/mars/: CMakeLists.txt  library.c  mars.c  mars.h
camlibs/minolta-dimagev/: CMakeLists.txt  capture.c  data.c  delete.c  dimagev.c  download.c  info.c  packet.c  status.c  upload.c  util.c
camlibs/mustek/: CMakeLists.txt  core.c  core.h  image.c  io.c  io.h  mdc800.c  mdc800_spec.h  mustek-config.c  print.h  rs232.c  rs232.h  usb.c  usb.h
camlibs/panasonic/: dc.c  dc.h  dc1000.c  dc1000.h  dc1580.c  dc1580.h
camlibs/panasonic-coolshot/: CMakeLists.txt  coolshot.c  library.c
camlibs/panasonic-dc1000/: CMakeLists.txt  dc.c  dc.h  dc1000.c
camlibs/panasonic-dc1580/: CMakeLists.txt  dc.c  dc.h  dc1580.c
camlibs/panasonic-l859/: CMakeLists.txt  l859.c
camlibs/pccam300/: CMakeLists.txt  library.c  pccam300.c  pccam300.h
camlibs/pccam600/: CMakeLists.txt  library.c  pccam600.c  pccam600.h
camlibs/pentax/: CMakeLists.txt  js0n.c  js0n.h  library.c  pslr.c  pslr.h  pslr_enum.c  pslr_enum.h  pslr_lens.c  pslr_model.c  pslr_model.h  pslr_scsi.h
camlibs/polaroid/: dlink350f.c  dlink350f.h  jd350e.c  jd350e_blue.h  jd350e_red.h  jpeghead.h  pdc320.c  pdc320.h  pdc640.c  pdc700.c
camlibs/polaroid-pdc320/: CMakeLists.txt  README  pdc320.c
camlibs/polaroid-pdc640/: CMakeLists.txt  README  dlink350f.c  jd350e.c  pdc640.c
camlibs/polaroid-pdc700/: CMakeLists.txt  README  pdc700.c
camlibs/ptp2/: CMakeLists.txt  chdk.c  chdk_live_view.h  chdk_ptp.h  config.c  device-flags.h  library.c  music-players.h  olympus-wrap.c  ptp-bugs.h  ptp-pack.c  ptp-private.h  ptp.c  ptp.h  ptpip.c  usb.c
camlibs/ricoh/: CMakeLists.txt  crctab.h  g3.c  library.c  ricoh.c  ricoh.h
camlibs/ricoh-g3/: CMakeLists.txt  g3.c
camlibs/samsung/: CMakeLists.txt  samsung.c
camlibs/sierra/: CMakeLists.txt  epson-desc.c  library.c  library.h  nikon-desc.c  olympus-desc.c  sierra-desc.c  sierra-desc.h  sierra-usbwrap.c  sierra-usbwrap.h  sierra.c  sierra.h
camlibs/sipix/: blink.c  blink2.c  web2.c  xjpeg.c
camlibs/sipix-blink/: CMakeLists.txt  blink.c
camlibs/sipix-blink2/: CMakeLists.txt  blink2.c
camlibs/sipix-web2/: CMakeLists.txt  web2.c
camlibs/smal/: CMakeLists.txt  smal.c  ultrapocket.c  ultrapocket.h
camlibs/sonix/: CMakeLists.txt  library.c  sakar-avi-header.h  sonix.c  sonix.h
camlibs/sonydscf1/: CMakeLists.txt  command.c  command.h  sonydscf1.c
camlibs/sonydscf55/: CMakeLists.txt  README  camera.c  nls.h  sony.c  sony.h
camlibs/soundvision/: CMakeLists.txt  agfa_cl18.c  commands.c  commands.h  soundvision.c  soundvision.h  tiger_fastflicks.c
camlibs/spca50x/: CMakeLists.txt  library.c  spca50x-avi-header.h  spca50x-flash.c  spca50x-flash.h  spca50x-jpeg-header.h  spca50x-registers.h  spca50x-sdram.c  spca50x-sdram.h  spca50x.c  spca50x.h
camlibs/sq905/: CMakeLists.txt  README  library.c  postprocess.c  sq905.c  sq905.h
camlibs/st2205/: CMakeLists.txt  library.c  (+4 more)
libgphoto2/: CMakeLists.txt  ahd_bayer.c  bayer.c  bayer.h  exif.c  exif.h  gamma.c  gamma.h  gphoto2-abilities-list.c  gphoto2-camera.c  gphoto2-config.h.in  gphoto2-context.c  gphoto2-file.c  gphoto2-filesys.c  gphoto2-library.c  gphoto2-list.c  gphoto2-result.c  gphoto2-setting.c  gphoto2-version.c  gphoto2-widget.c  jpeg.c  jpeg.h
libgphoto2_port/: CMakeLists.txt
tests/: CMakeLists.txt  print-libgphoto2-version.c  test-camera-list.c  test-endian.c  test-filesys.c  test-gphoto2.c  test-pedantic-compilation.c  test-version.c
(+173 files in other folders)
