#
# libgphoto2
#

# Interface library
add_library(gphoto2-camlib INTERFACE)
target_include_directories(gphoto2-camlib BEFORE
    INTERFACE "${PROJECT_SOURCE_DIR}"
    INTERFACE "${PROJECT_SOURCE_DIR}/libgphoto2_port"
    INTERFACE "${PROJECT_SOURCE_DIR}/libgphoto2"
    INTERFACE "${CMAKE_BINARY_DIR}"
)
target_compile_options(gphoto2-camlib INTERFACE -D_GPHOTO2_INTERNAL_CODE)

# List plugins
if (BUILD_CAMERA_ADC65)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} adc65)
endif ()
if (BUILD_CAMERA_AGFA_CL20)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} agfa-cl20)
endif ()
if (BUILD_CAMERA_AOX)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} aox)
endif ()
if (BUILD_CAMERA_AX203)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} ax203)
endif ()
if (BUILD_CAMERA_BARBIE)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} barbie)
endif ()
if (BUILD_CAMERA_CANON)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} canon)
endif ()
if (BUILD_CAMERA_CASIO)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} casio)
endif ()
if (BUILD_CAMERA_CLICKSMART310)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} clicksmart310)
endif ()
if (BUILD_CAMERA_DIGIGR8)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} digigr8)
endif ()
if (BUILD_CAMERA_DIGITA)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} digita)
endif ()
if (BUILD_CAMERA_DIMERA)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} dimera)
endif ()
if (BUILD_CAMERA_DIRECTORY)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} directory)
endif ()
if (BUILD_CAMERA_ENIGMA13)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} enigma13)
endif ()
if (BUILD_CAMERA_FUJI)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} fuji)
endif ()
if (BUILD_CAMERA_GSMART300)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} gsmart300)
endif ()
if (BUILD_CAMERA_HP215)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} hp215)
endif ()
if (BUILD_CAMERA_ICLICK)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} iclick)
endif ()
if (BUILD_CAMERA_JAMCAM)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} jamcam)
endif ()
if (BUILD_CAMERA_JD11)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} jd11)
endif ()
if (BUILD_CAMERA_JL2005A)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} jl2005a)
endif ()
if (BUILD_CAMERA_JL2005C)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} jl2005c)
endif ()
if (BUILD_CAMERA_KODAK_DC120)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} kodak-dc120)
endif ()
if (BUILD_CAMERA_KODAK_DC210)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} kodak-dc210)
endif ()
if (BUILD_CAMERA_KODAK_DC240)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} kodak-dc240)
endif ()
if (BUILD_CAMERA_KODAK_DC3200)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} kodak-dc3200)
endif ()
if (BUILD_CAMERA_KODAK_EZ200)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} kodak-ez200)
endif ()
if (BUILD_CAMERA_KONICA)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} konica)
endif ()
if (BUILD_CAMERA_KONICA_QM150)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} konica-qm150)
endif ()
if (BUILD_CAMERA_LARGAN_LMINI)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} largan-lmini)
endif ()
if (BUILD_CAMERA_LG_GSM)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} lg-gsm)
endif ()
if (BUILD_CAMERA_LUMIX)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} lumix)
endif ()
if (BUILD_CAMERA_MARS)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} mars)
endif ()
if (BUILD_CAMERA_MINOLTA_DIMAGEV)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} minolta-dimagev)
endif ()
if (BUILD_CAMERA_MUSTEK)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} mustek)
endif ()
if (BUILD_CAMERA_PANASONIC_COOLSHOT)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} panasonic-coolshot)
endif ()
if (BUILD_CAMERA_PANASONIC_DC1000)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} panasonic-dc1000)
endif ()
if (BUILD_CAMERA_PANASONIC_DC1580)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} panasonic-dc1580)
endif ()
if (BUILD_CAMERA_PANASONIC_L859)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} panasonic-l859)
endif ()
if (BUILD_CAMERA_PCCAM300)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} pccam300)
endif ()
if (BUILD_CAMERA_PCCAM600)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} pccam600)
endif ()
if (BUILD_CAMERA_PENTAX)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} pentax)
endif ()
if (BUILD_CAMERA_POLAROID_PDC320)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} polaroid-pdc320)
endif ()
if (BUILD_CAMERA_POLAROID_PDC640)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} polaroid-pdc640)
endif ()
if (BUILD_CAMERA_POLAROID_PDC700)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} polaroid-pdc700)
endif ()
if (BUILD_CAMERA_PTP2)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} ptp2)
endif ()
if (BUILD_CAMERA_RICOH_G3)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} ricoh-g3)
endif ()
if (BUILD_CAMERA_RICOH)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} ricoh)
endif ()
if (BUILD_CAMERA_SAMSUNG)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} samsung)
endif ()
if (BUILD_CAMERA_SIERRA)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} sierra)
endif ()
if (BUILD_CAMERA_SIPIX_BLINK2)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} sipix-blink2)
endif ()
if (BUILD_CAMERA_SIPIX_BLINK)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} sipix-blink)
endif ()
if (BUILD_CAMERA_SIPIX_WEB2)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} sipix-web2)
endif ()
if (BUILD_CAMERA_SMAL)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} smal)
endif ()
if (BUILD_CAMERA_SONIX)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} sonix)
endif ()
if (BUILD_CAMERA_SONYDSCF1)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} sonydscf1)
endif ()
if (BUILD_CAMERA_SONYDSCF55)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} sonydscf55)
endif ()
if (BUILD_CAMERA_SOUNDVISION)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} soundvision)
endif ()
if (BUILD_CAMERA_SPCA50X)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} spca50x)
endif ()
if (BUILD_CAMERA_SQ905)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} sq905)
endif ()
if (BUILD_CAMERA_ST2205)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} st2205)
endif ()
if (BUILD_CAMERA_STV0674)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} stv0674)
endif ()
if (BUILD_CAMERA_STV0680)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} stv0680)
endif ()
if (BUILD_CAMERA_SX330Z)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} sx330z)
endif ()
if (BUILD_CAMERA_TOPFIELD)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} topfield)
endif ()
if (BUILD_CAMERA_TOSHIBA_PDRM11)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} toshiba-pdrm11)
endif ()
if (BUILD_CAMERA_TP6801)
    set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} tp6801)
endif ()

# Add plugins
foreach (LIBGPHOTO2_CAMERA_PLUGIN ${LIBGPHOTO2_CAMERA_PLUGINS})
    add_subdirectory(${LIBGPHOTO2_CAMERA_PLUGIN})
endforeach ()

# Export list of plugins
set(LIBGPHOTO2_CAMERA_PLUGINS ${LIBGPHOTO2_CAMERA_PLUGINS} PARENT_SCOPE)
